--- a/style.css
+++ b/style.css
@@ -1,9 +1,78 @@
+@keyframes toggleOn {
+    0%{
+        transform: translateX(0);
+    }
 
+    100%{
+        transform: translateX(50px);
+    }
+}
+
+@keyframes toggleOff {
+   100%{
+        transform: translateX(0);
+    }
+
+    0%{
+        transform: translateX(50px);
+    }
+}
 body{
     margin: 0;
     background-color: wheat;
-    display: flex;
     height: 100vh;
+    display: flex;
+    flex-direction: column;
+    
+}
+.nav-bar{
+    width: 100%;
+    height: 50px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+   padding-left: 10px;
+   
+    background-color: antiquewhite;
+}
+.input{
+    visibility: hidden;
+   
+}
+
+.label{
+    width: 90px;
+    height: 40px;
+    background-color:black ;
+    border-radius: 20px;
+    position: relative;
+    cursor: pointer;
+    
+}
+.circle{
+    height: 34px;
+    width: 34px;
+    border-radius: 50%;
+    background-color: white;
+    position: absolute;
+    top: 3px;
+    left: 3px;
+
+    animation:toggleOff .4s linear forwards ;
+   
+}
+
+.input:checked + .label .circle{
+    animation:toggleOn .4s linear forwards ;
+} 
+
+.input:checked + .label{
+    background-color:salmon ;
+}
+
+.container{
+    display: flex;
+    height: 80%;
     justify-content: center;
     align-items: center;
 }
